@startuml

class Customer {
  - customerId: Long
  - name: String
  - email: String
  + List<Order> orders
  + List<Address> addresses
}

class Address {
  - addressId: Long
  - street: String
  - city: String
  - zipCode: String
  + List<Customer> customers
}

class Order {
  - orderId: Long
  - orderDate: Date
  - status: String
  + Customer customer
  + Address deliveryAddress
  + List<Machine> machines
}

class Machine {
  - machineId: Long
  - type: String
  - model: String
  + List<Subassembly> subassemblies
}

class Subassembly {
  - subassemblyId: Long
  - name: String
  - description: String
  + List<Part> parts
}

class Part {
  - partId: Long
  - partName: String
  - description: String
  +list: List<Subassembly>
}

Customer "1" -- "*" Address
Customer "1" -- "*" Order
Address "*" -- "*" Customer
Order "1" -- "1" Address
Order "1" -- "*" Machine
Machine "1" -- "*" Subassembly
Subassembly "1" -- "*" Part

@enduml
